[package]
name = "nuntium"
version = "0.1.0"
edition = "2021"

[dependencies]
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
aes-gcm = { version = "0.10", features = ["aes"] }
rand = "0.8"
tun = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = "0.4.41"
pnet = "0.35.0"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3"
