[package]
name = "nuntium"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
byteorder = "1.5"
pnet = "0.35.0"
pqcrypto-kyber = "0.8.1"
pqcrypto-traits = "0.3.5"
crossbeam = "0.8"
aes-gcm = "0.10.3"
lru = "0.12"
log = "0.4"
env_logger = "0.10"

[target.'cfg(unix)'.dependencies]
tun = "0.5"
nix = { version = "0.28", features = ["poll"] }

[target.'cfg(windows)'.dependencies]
wintun = "0.5"

[dev-dependencies]
tempfile = "3"
